# JADE-DLS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUI_QUICKSTART.md  README.md  clustering-help.txt  cumulants.py  jade-dls-gui.py  jade_dls_gui.py  peak_clustering.py  pipeline_fixes_needed.py  preprocessing.py  pyproject.toml  regularized.py  regularized_optimized.py  requirements.txt  requirements_gui.txt  run.py  start_gui.sh
.claude/: settings.local.json
JADE-DLS-2.0/: JADE-DLS_vers2.ipynb  clustering.py
JADE-DLS-2.0/JADE-DLS-2.0/: CHANGELOG.md  README.md  cumulants_C.py  cumulants_D.py  preprocessing.py  regularized.py
JADE-DLS-2.1/: CHANGELOG.md  JADE-DLS_vers2_1.ipynb  clustering.py  preprocessing.py  regularized.py  sls_functions_for_regularized.py
JADE-DLS-2.2/: CHANGELOG.md  JADE-DLS_vers2-2.ipynb  clustering.py  cumulants.py  cumulants_C.py  intensity.py  noise.py  preprocessing.py  regularized.py
Reports/report_tex/: report.aux  report.tex
ade_dls/: __init__.py
ade_dls/analysis/: __init__.py  clustering.py  cumulants.py  cumulants_C.py  cumulants_D.py  noise.py  peak_clustering.py  regularized.py  regularized_optimized.py  sls.py
ade_dls/core/: __init__.py  data_loader.py  preprocessing.py
ade_dls/gui/: __init__.py  main_window.py
ade_dls/utils/: __init__.py  intensity.py
docs/: FILTERING_GUIDE.md  analysis_methods.md  data_formats.md  extending_loaders.md  installation.md  quickstart.md  user_guide.md
example_files_monomodal/example_files_monomodal/: 080622_5_0053_0001.ASC  080622_5_0053_0002.ASC  080622_5_0053_0003.ASC  080622_5_0053_averaged.ASC  080622_5_0054_0001.ASC  080622_5_0054_0002.ASC  080622_5_0054_0003.ASC  080622_5_0054_averaged.ASC  080622_5_0055_0001.ASC  080622_5_0055_0002.ASC  080622_5_0055_0003.ASC  080622_5_0055_averaged.ASC  080622_5_0056_0001.ASC  080622_5_0056_0002.ASC  080622_5_0056_0003.ASC  080622_5_0056_averaged.ASC  080622_5_0057_0001.ASC  080622_5_0057_0002.ASC  080622_5_0057_0003.ASC  080622_5_0057_averaged.ASC  080622_5_0058_0001.ASC  080622_5_0058_0002.ASC  080622_5_0058_0003.ASC  080622_5_0058_averaged.ASC  080622_5_0059_0001.ASC  080622_5_0059_0002.ASC  080622_5_0059_0003.ASC  080622_5_0059_averaged.ASC  080622_5_0060_0001.ASC  080622_5_0060_0002.ASC  080622_5_0060_0003.ASC  080622_5_0060_averaged.ASC  080622_5_0061_0001.ASC  080622_5_0061_0002.ASC  080622_5_0061_0003.ASC  080622_5_0061_averaged.ASC  080622_5_0062_0001.ASC  080622_5_0062_0002.ASC  080622_5_0062_0003.ASC  080622_5_0062_averaged.ASC  (+12 more)
gui/: main_window.py
gui/analysis/: cumulant_analyzer.py  cumulant_plotting.py  laplace_analyzer.py
gui/core/: __init__.py  data_loader.py  pipeline.py  status_manager.py
gui/dialogs/: __init__.py  alpha_analysis_dialog.py  cumulant_dialog.py  cumulant_results_dialog.py  filtering_dialogs.py  laplace_postfit_dialog.py  method_c_postfit_dialog.py  nnls_dialog.py  nnls_results_dialog.py  parameter_dialog.py  postfilter_dialog.py  postfit_refinement_dialog.py  regularized_dialog.py
tests/: test_csv_export.py  test_parser_contract.py
(+41 files in other folders)
